added more notes to HTML file

--- a/index.html
+++ b/index.html
@@ -18,10 +18,35 @@
       <section class="card" id="html-section">
           <h2>HTML</h2>
           <ul>
-            <li>The head element contains information about the webpage.</li>
-            <li>The body element represents the visible content shown to the user.</li>
-            <li>I can add more notes here.</li>
-          </ul>
+            
+            <li>HTML Elements</li>
+              <p>HTML elements are usually composed of an opening tag and closing tag using angle brackets and are case sensitive.</p>
+              <p>HTML attributes define additional information about the element, and are always defined in the beginning element.</p>
+              <p>Elements are the entire element including angle brackets. Tags are the portion inside the angle brackets.</p>
+              <p>HTML opening tag is the start of the document.</p>
+              <p>lang= "en" tells the browser the language for the webpage. in this case English.</p>
+              <br />  
+             <li>The head element: </li>
+              <p>contains information (metadata) about the webpage.</p>
+              <p>not visible to user looking at webpage</p>
+              <p>The title element defines the title for the webpage, is req'd and extremely important for SEO.</p>
+              <p>The style element defines the CSS styles for the website.</p>
+              <p>The base element defines the base URL for a webpage.</p>
+              <p>The link element connects an external resource to the HTML document.</p>
+              <p>The meta element defines metadata like character set, description, keywords, author, and viewport.</p>
+              <p>The script element embeds client-side scripts in the HTML document.</p>
+              <br />
+            <li>The body element: </li>
+            <p> represents the visible content shown to the user.</p>
+            <p> The h1 to h6 elements represent larger more prominent titles/subtitles in a given text block.</p>
+            <p> The p element represents a paragraph or block of text. and will wrap most of the text on your pages</p>
+            <p> The ul ol and li elements represent unordered, ordered and list items.</p>
+            <p> The img element contains information about the image on a webpage.  Most important is the src attribute which defines the location of the image.</p>
+            <p> The br element creates an empty line or line break.</p>
+            <p>The a element stands for anchor, and creates links to other webpages. The href attribute points to the URL.</p>
+            <br />
+             <li>!DOCTYPE html declaration tells browser what document to expect when opened. in this case html. not case sensitive.</li>
+                      </ul>
       </section>
 
       <section class="card" id="css-section">
