--- a/index.html
+++ b/index.html
@@ -71,7 +71,43 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>javascript code lines end in a semicolon</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>a variable is simply a named container that allows us to store data in our code</li>
+          <li>to declare a variable, use keyword var, then a name, then = data we want stored. for example, var shape = "circle";</li>
+          <li>console.log(argument) outputs the argument value to the web console</li>
+          <li>script.js in the assets folder is linked to the html file with <script src="./assets/script.js"></script> and is placed in the body</li>
+          <li>to see right click on webpage and select inspect.  in the window that opens select the console tab.</li>
+          <li>sample if var topic = "HTML";
+
+            if (topic === 'HTML') {
+             console.log("Let's study HTML!");
+            } else if (topic === 'CSS') {
+             console.log("Let's study CSS!");
+            } else if (topic === 'Git') {
+             console.log("Let's study Git!");
+            } else if (topic === 'JavaScript') {
+             console.log("Let's study JavaScript!");
+            } else {
+             console.log('Please try again!');
+            }</li>
+            <li>for arrays, define the variable as ["a","b","c"]; values assigned to these are 0,1,2..these are the indeces</li>
+            <li>variables can be assigned different types of data, strings, numbers, etc</li>
+            <li>console.log(shapes[0]); is an example where sahpes has index value 0</li>
+            <li>for(var x = 0; x < shapes.length; x++) {
+              console.log(shapes[x]);</li>
+            <li>function example function helloWorld() {
+                console.log("Hello, world, I am a function!")
+                        }</li>
+            <li>call example is the listTopics() and selectTopic() portions: console.log('Here are the topics we learned through Prework:');
+              listTopics();
+              console.log('Which topic should we study first?');
+              selectTopic();</li>
+
+
         </ul>
       </section>
     </main>
