updated project README file and modified Git notes

--- a/index.html
+++ b/index.html
@@ -61,10 +61,17 @@
         <ul>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li></li>
+          <li>SYNC GITHUB REPO WITH CURRENT WORK</li>
+          <li>add and commit your files</li>
           <li>git add -A: commits all files in the working branch</li>
+          <li>include a commit message</li>
           <li>git commit -m "add message here": associates a message with our commit; message would be replaced within quotes; short about changes implemented</li>
+          <li>pull in the base branch main</li>
           <li>git pull origin main: ensures current branch is up to date before opening a pull request</li>
+          <li>push up your feature branch</li>
           <li>git push origin feature/add-html: pushes up all changes; replace feature/add-html with branch name</li>
+          
         </ul>
       </section>
 
